--- a/src/index.html
+++ b/src/index.html
@@ -4,35 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Logistica</title>
 </head>
 <body>
    <section>
-       <div class="container">
-            <div class="topo-barra-superior">
-                <a href="#"><img src="#" alt="email da empresa, info@yourdomain.com">info@yourdomain.com</a>
-                <a href="#"><img src="#" alt="numero de telefone da empresa, 1+ (234) 5678 9101">1+ (234) 5678 9101</a>
-                <a href="#"><img src="#" alt="icone twitter">Twitter</a>
-                <a href="#"><img src="#" alt="ícone facebbok">Facebook</a>
-            </div>
-            <div class="topo-menu">
-                <h1>DEPOT</h1>
-                <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Why Us</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="clear"></div>
-            <div class="banner">
-                <img src="./img/ft1.jpg" alt="">
-            </div>
+       <div class="top-bar">
+           <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <span>info@yourdomain.com</span>
+                        <span>1+ (234) 5678 9101</span>
+                    
+                        <div class="direita">
+                            <span>Twitter</span>
+                            <span>Facebook</span>
+                        </div>
+                   </div>
+               </div>
+           </div>
        </div>
+
+       
    </section>
 </body>
 </html>
