--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,49 @@
            </div>
        </div>
 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">DEPOT</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(Página atual)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Destaques</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Preços</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Desativado</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+       <!-- 
+           <div class="navbar">
+               <div class="container">
+                   <div class="row">
+                       <div class="col-12">
+                           <h1>DEPOT</h1>
+                           <ul>
+                               <a href="#"><li>Home</li></a>
+                               <a href="#"><li>Services</li></a>
+                               <a href="#"><li>About Us</li></a>
+                               <a href="#"><li>Why Us</li></a>
+                               <a href="#"><li>Testimonials</li></a>
+                               <a href="#"><li>Blog</li></a>
+                               <a href="#"><li>Contact</li></a>
+                           </ul>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       -->
+
        
    </section>
 </body>
