--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,34 @@
     </header>
 
     <section>
-        <div class="">
-            <img src="./img/depot_hero_1.jpg" class="img-fluid" alt="">
+        <div class="menu-img" style="background-image: url('./img/depot_hero_1.jpg')" >
         </div>
+        <div class="teste">
+        </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="teste">
+            <div class="col-lg-4">
+              <img  src="./img/depot_img_1.jpg" alt="">
+              <h3>Truck insurance</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ad ex consequuntur ducimus optio quasi libero enim veniam dolore odio hic est, quia, porro reprehenderit quibusdam. Quidem, vitae. Aliquam, error.</p>
+            </div>
+            <div class="col-lg-4">
+              <img  src="./img/depot_img_2.jpg" alt="">
+              <h3>Plane transportation</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ad ex consequuntur ducimus optio quasi libero enim veniam dolore odio hic est, quia, porro reprehenderit quibusdam. Quidem, vitae. Aliquam, error.</p>
+            </div>
+            <div class="col-lg-4">
+              <img  src="./img/depot_img_3.jpg" alt="">
+              <h3>Sea & Ear Freight</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ad ex consequuntur ducimus optio quasi libero enim veniam dolore odio hic est, quia, porro reprehenderit quibusdam. Quidem, vitae. Aliquam, error.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     
