--- a/src/index.html
+++ b/src/index.html
@@ -45,40 +45,47 @@
         </nav>
       </div>
     </nav>
-  </header>
-
-  <section>
-    <div class="menu-img" style="background-image: url('./img/depot_hero_1.jpg')">
-    </div>
+    <div class="menu-img" style="background-image: url('./img/depot_hero_1.jpg')"></div>
     <div class="teste"></div>
-  </section>
+  </header>
+  <main>
+    <section class="feature">
+      <div class="container">
+        <div class="coluna">
+          <img src="./img/depot_img_1.jpg" alt="" class="img-fluid">
+          <h3>Truck Insurance</h3>
+          <p>Deixe sempre fácil a suas contas que você<br>
+          deve pagar, sabendo a data de vencimento,<br>
+          valor e o que isso vai significar na sua conta</p>
+        </div>
+        <div class="coluna">
+          <img src="./img/depot_img_2.jpg" alt="" class="img-fluid">
+          <h3>Plane Transportation</h3>
+          <p>Crie um plano para pagar todas<br>
+          as dividas de forma mais rápida possível<br>
+          fazendo os juros trabalhar para você</p>
+        </div>
+        <div class="coluna">
+          <img src="./img/depot_img_3.jpg" alt="" class="img-fluid">
+          <h3>Sea & Ear Freight</h3>
+          <p>Para que precisamos de bancos se<br>
+          podemos ter dinheiro caso a gente precise?<br>
+          Uma boa reserva de emergência é a solução</p>
+        </div>
+        <div class="clear"></div>
+      </div>
+    </section>
+    
+    <section class="services">
+      <div class="container">
+        <div class="fundo-services">
+          <h2>Services</h2>
+          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+        </div>
+      </div>
+    </section>
+  </main>
 
-  <section class="feature">
-    <div class="container">
-      <div class="coluna">
-        <img src="./img/depot_img_1.jpg" alt="" class="img-fluid">
-        <h3>Truck Insurance</h3>
-        <p>Deixe sempre fácil a suas contas que você<br>
-        deve pagar, sabendo a data de vencimento,<br>
-        valor e o que isso vai significar na sua conta</p>
-      </div>
-      <div class="coluna">
-        <img src="./img/depot_img_2.jpg" alt="" class="img-fluid">
-        <h3>Plane Transportation</h3>
-        <p>Crie um plano para pagar todas<br>
-        as dividas de forma mais rápida possível<br>
-        fazendo os juros trabalhar para você</p>
-      </div>
-      <div class="coluna">
-        <img src="./img/depot_img_3.jpg" alt="" class="img-fluid">
-        <h3>Sea & Ear Freight</h3>
-        <p>Para que precisamos de bancos se<br>
-        podemos ter dinheiro caso a gente precise?<br>
-        Uma boa reserva de emergência é a solução</p>
-      </div>
-      <div class="clear"></div>
-    </div>
-  </section>
 
     
 </body>
