--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <div class="container">
 
       <h2>Services</h2>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+      <p>Far far away, behind the word mountains, far from the countries Vokalia and<br> Consonantia, there live the blind texts.</p>
 
 
     </div>
